--- a/src/components/filter-results/filter-results.scss
+++ b/src/components/filter-results/filter-results.scss
@@ -154,6 +154,7 @@
     overflow: hidden;
     gap: 8px;
     border-radius: 8px 0 0 8px;
+    padding-bottom: 12px;
     background: #f2f2f2;
     will-change: transform;
   }
@@ -184,8 +185,36 @@
   .body-scroll-wrapper {
     position: relative;
     width: 100%;
-    margin: 12px 12px 12px 0;
+    margin-top: 12px;
     overflow: scroll;
+
+    &::-webkit-scrollbar {
+      position: absolute;
+      width: 12px;
+      height: 12px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background: global.$defaultGrey300;
+      border-radius: 10px;
+      min-height: 20%;
+      height: auto;
+      border: 3px global.$defaultGrey100 solid;
+
+      &:hover {
+        background: global.$defaultGrey400;
+        cursor: pointer;
+      }
+    }
+
+    &::-webkit-scrollbar-corner {
+      display: none;
+    }
   }
 
   #result-scrollY {
@@ -727,6 +756,7 @@
             padding: 8px 0;
             border-radius: 4px;
             font-size: 12px;
+            max-height: 32px;
           }
         }
       }
@@ -754,7 +784,7 @@
 
       .pokemon-moves {
         .subtitle {
-          min-width: 90px;
+          min-width: 72px;
           width: auto;
         }
       }
@@ -766,7 +796,21 @@
     height: calc(100vh - 71px - 188px - 79.5px - 20px - 8px);
 
     .body-scroll-wrapper {
-      margin: 8px 8px 8px 0;
+      margin-top: 8px;
+
+      &::-webkit-scrollbar {
+        width: 8px;
+        height: 8px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        border: 1.5px global.$defaultGrey100 solid;
+
+        &:hover {
+          background: global.$defaultGrey400;
+          cursor: pointer;
+        }
+      }
     }
 
     .result-body-container {
@@ -866,7 +910,7 @@
         width: auto;
 
         .result-move-info {
-          min-width: 90px;
+          min-width: 72px;
           width: auto;
         }
       }
